Added parsing pg array, updated swagger and checked_in
